bk_ida/gccida/g1/final
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final/src/final.c:2154:4: error: expected ';' after expression
rtx v9; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final/src/final.c:2154:5: error: use of undeclared identifier 'v9'
rtx v9; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final/src/final.c:2156:4: error: expected ';' after expression
rtx i; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final/src/final.c:2156:5: error: use of undeclared identifier 'i'
rtx i; // rdi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final/src/final.c:2174:1: error: use of undeclared identifier 'v9'
v9 = first; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final/src/final.c:2177:17: error: use of undeclared identifier 'v9'
if ( *( _WORD *)v9 == 37 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final/src/final.c:2179:7: error: use of undeclared identifier 'v9'
v10 = v9[2].fld[0].rtint; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final/src/final.c:2183:1: error: use of undeclared identifier 'v9'
v9 = v9[1].fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final/src/final.c:2183:6: error: use of undeclared identifier 'v9'
v9 = v9[1].fld[0].rtx; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final/src/final.c:2185:9: error: use of undeclared identifier 'v9'
while ( v9 ); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final/src/final.c:2192:7: error: use of undeclared identifier 'i'
for ( i = first[1].fld[0].rtx; i; i = final_scan_insn( i, file, optimize, prescan, 0) ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final/src/final.c:2192:32: error: use of undeclared identifier 'i'
for ( i = first[1].fld[0].rtx; i; i = final_scan_insn( i, file, optimize, prescan, 0) ) 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final/src/final.c:2192:56: error: use of undeclared identifier 'i'
for ( i = first[1].fld[0].rtx; i; i = final_scan_insn( i, file, optimize, prescan, 0) ) 
                                                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final/src/final.c:2192:35: error: use of undeclared identifier 'i'
for ( i = first[1].fld[0].rtx; i; i = final_scan_insn( i, file, optimize, prescan, 0) ) 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final/src/final.c:2195:6: error: use of undeclared identifier 'i'
if ( i->fld[0].rtuint < insn_addresses_->num_elements ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final/src/final.c:2196:31: error: use of undeclared identifier 'i'
v12 = insn_addresses_->data.i[i->fld[0].rtint]; 
                              ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/final/src/obj/final.o] Error 1
